--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ http {
         server_name nostr.dojotunnel.online;
         location / {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
+            proxy_set_header Host relay;
             proxy_pass http://relay:7447;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
