--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,18 @@
 version: '3.8'
 
 services:
-  #nginx:
-  #  image: nginx
-  #  ports:
-  #    - "80:80"
-  #  volumes:
-  #    - ./nginx.conf:/etc/nginx/nginx.conf
-  #  depends_on:
-  #    - relay
   relay:
     container_name: relay
     build: .
     ports:
       - "8008:7447"
     environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_USER: postgres
-      DB_PASS: example
-      DB_NAME: postgres
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASS=example
+      - DB_NAME=postgres
+      - DATABASE_URL=postgresql://${DB_USER}:${DB_PASS}@postgres:5432/${DB_NAME}
     depends_on:
       - db
   db:
