Working proxy, flask app, postgres db and test file

--- a/docker_stuff/Dockerfile
+++ b/docker_stuff/Dockerfile
@@ -7,4 +7,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["python", "main_go.py"]
+CMD ["python", "./python_stuff/main.py"]
