--- a/docker_stuff/Dockerfile
+++ b/docker_stuff/Dockerfile
@@ -5,6 +5,6 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY ./python_stuff .
 
-CMD ["python", "./python_stuff/main.py"]
+CMD ["python", "mainwss.py"]
