--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -3,7 +3,9 @@ version: '3.8'
 services:
   relay:
     container_name: relay
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8008:8008"
     environment:
@@ -14,19 +16,22 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       - SQLALCHEMY_SILENCE_UBER_WARNING=1
+    volumes:
+      - ./errors:/errors
     depends_on:
       postgres:
         condition: service_healthy
   postgres:
-    image: postgres
-    restart: always
+    image: postgres:latest
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_HOST_AUTH_METHOD=trust # allow all connections without a password. This is *not* recommended for prod
+      #- POSTGRES_INITDB_ARGS=--extension=jsonb_ops
     ports:
       - 5432:5432
+
+
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U nostr"] # database username here - nostr, should be changed if other user
       interval: 10s
