postgres.conf, working apm and profiler

--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -35,6 +35,8 @@ services:
       #- POSTGRES_INITDB_ARGS=--extension=jsonb_ops
     ports:
       - 5432:5432
+    volumes:
+      - ./data:/var/lib/postgresql/data
 
 
     healthcheck:
