Add datadog agnet + env for api key

--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -42,3 +42,43 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  datadog-agent:
+    container_name: datadog-agent
+    image: datadog/agent:latest
+    environment:
+      ## GLOBALS
+    - DD_API_KEY=${DD_API_KEY}
+    - DD_SITE=datadoghq.com
+    - DD_HOSTNAME=nostpy
+    - DD_TAGS=env:nostr owner:brian service:nostpy
+    - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
+    - DD_DOCKER_LABELS_AS_TAGS=true
+    - DD_DOCKER_ENV_AS_TAGS=true
+    - DD_SYSTEM_PROBE_ENABLED=true
+    - DD_PROCESS_AGENT_ENABLED=true
+    - DD_APM_NON_LOCAL_TRAFFIC=true
+    - DD_AGENT_HOST=host.docker.internal
+    - DD_LOGS_ENABLED=true
+    - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
+    - DD_LOG_LEVEL=debug
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock:ro
+    - /proc/:/host/proc/:ro
+    - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
+    - /sys/kernel/debug:/sys/kernel/debug
+    cap_add:
+    - SYS_ADMIN
+    - SYS_RESOURCE
+    - SYS_PTRACE
+    - NET_ADMIN
+    - NET_BROADCAST
+    - NET_RAW
+    - IPC_LOCK
+    - CHOWN
+    security_opt:
+    - apparmor:unconfined
+    ports:
+    - "8126:8126"
+    - "8125:8125"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
