--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -1,30 +1,31 @@
-version: '3.8'
-
+version: '3'
 services:
-  relay:
-    container_name: relay
+  websocket_handler:
     build:
       context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8008:8008"
+      dockerfile: Dockerfile.websocket_handler
     environment:
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
-      - DD_AGENT_HOST=host.docker.internal
+      - DD_SERVICE=websocket_handler
+      - DD_ENV=nostpy
+      - DD_LOGS_INJECTION=true
       - DD_PROFILING_ENABLED=true
-      - DD_SERVICE=nostpy
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    volumes:
-      - ./errors:/errors
-    depends_on:
-      postgres:
-        condition: service_healthy
+    networks:
+      my_network:
+        ipv4_address: 172.28.0.2
+
+  event_handler:
+    build:
+      context: .
+      dockerfile: Dockerfile.event_handler
+    environment:
+      - DD_SERVICE=event_handler
+      - DD_ENV=nostpy
+      - DD_LOGS_INJECTION=true
+      - DD_PROFILING_ENABLED=true
+    networks:
+      my_network:
+        ipv4_address: 172.28.0.3
+
   postgres:
     image: postgres:latest
     environment:
@@ -33,54 +34,72 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - 5432:5432
-
+    networks:
+      my_network:
+        ipv4_address: 172.28.0.4
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U nostr"] # database username here - nostr, should be changed if other user
       interval: 10s
       timeout: 5s
       retries: 5
+
   datadog-agent:
     container_name: datadog-agent
     image: datadog/agent:latest
     environment:
       ## GLOBALS
-    - DD_API_KEY=${DD_API_KEY}
-    - DD_SITE=datadoghq.com
-    - DD_HOSTNAME=nostpy
-    - DD_TAGS=env:nostr owner:brian service:nostpy
-    - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
-    - DD_DOCKER_LABELS_AS_TAGS=true
-    - DD_DOCKER_ENV_AS_TAGS=true
-    - DD_SYSTEM_PROBE_ENABLED=true
-    - DD_PROCESS_AGENT_ENABLED=true
-    - DD_APM_NON_LOCAL_TRAFFIC=true
-    - DD_AGENT_HOST=host.docker.internal
-    - DD_LOGS_ENABLED=true
-    - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
-    - DD_LOG_LEVEL=debug
+      - DD_API_KEY=${DD_API_KEY}
+      - DD_SITE=datadoghq.com
+      - DD_HOSTNAME=nostpy
+      - DD_TAGS=env:nostr owner:brian service:nostpy
+      - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
+      - DD_DOCKER_LABELS_AS_TAGS=true
+      - DD_DOCKER_ENV_AS_TAGS=true
+      - DD_SYSTEM_PROBE_ENABLED=true
+      - DD_PROCESS_AGENT_ENABLED=true
+      - DD_APM_NON_LOCAL_TRAFFIC=true
+      - DD_AGENT_HOST=host.docker.internal
+      - DD_LOGS_ENABLED=true
+      - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
+      - DD_LOG_LEVEL=debug
     volumes:
-    - /var/run/docker.sock:/var/run/docker.sock:ro
-    - /proc/:/host/proc/:ro
-    - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
-    - /sys/kernel/debug:/sys/kernel/debug
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /proc/:/host/proc/:ro
+      - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
+      - /sys/kernel/debug:/sys/kernel/debug
     cap_add:
-    - SYS_ADMIN
-    - SYS_RESOURCE
-    - SYS_PTRACE
-    - NET_ADMIN
-    - NET_BROADCAST
-    - NET_RAW
-    - IPC_LOCK
-    - CHOWN
+      - SYS_ADMIN
+      - SYS_RESOURCE
+      - SYS_PTRACE
+      - NET_ADMIN
+      - NET_BROADCAST
+      - NET_RAW
+      - IPC_LOCK
+      - CHOWN
     security_opt:
-    - apparmor:unconfined
+      - apparmor:unconfined
     ports:
-    - "8126:8126"
-    - "8125:8125"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - "8126:8126"
+      - "8125:8125"
+    networks:
+      my_network:
+        ipv4_address: 172.28.0.5
+
   redis:
     image: redis:latest
     container_name: redis-cache
     ports:
       - "6379:6379"
+    networks:
+      my_network:
+        ipv4_address: 172.28.0.6
+
+networks:
+  my_network:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.28.0.0/16
+
+
