--- a/docker_stuff/Dockerfile.event_handler
+++ b/docker_stuff/Dockerfile.event_handler
@@ -15,4 +15,4 @@ COPY ./python_stuff/event_handler.py .
 
 
 # Run the Python application
-CMD ["ddtrace-run". "python", "event_handler.py"]
+CMD ["ddtrace-run", "python", "event_handler.py"]
