--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -41,8 +41,8 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    #ports:
-    #  - 5432
+    ports:
+      - 5432:5432
     networks:
       my_network:
         ipv4_address: 172.28.0.4
