Add health check for eh to start before qs

--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -34,7 +34,6 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-
   query_service:
     build:
       context: .
@@ -53,8 +52,13 @@ services:
       my_network:
         ipv4_address: 172.28.0.7
     depends_on:
-      postgres:
-        condition: service_healthy
+      event_handler
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail http://event_handler/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
 
   postgres:
     image: postgres:latest
