--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -31,11 +31,6 @@ services:
     networks:
       my_network:
         ipv4_address: 172.28.0.3
-    healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://event_handler/health || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
     depends_on:
       postgres:
         condition: service_healthy
@@ -58,9 +53,7 @@ services:
       my_network:
         ipv4_address: 172.28.0.7
     depends_on:
-      event_handler:
-        condition: service_healthy
-
+      - event_handler
 
 
   postgres:
