Add docker host internal

--- a/docker_stuff/.env
+++ b/docker_stuff/.env
@@ -2,4 +2,4 @@ SQLALCHEMY_SILENCE_UBER_WARNING=1
 POSTGRES_DB=nostr
 POSTGRES_USER=nostr
 POSTGRES_PASSWORD=nostr
-DD_API_KEY=
+DD_API_KEY=7318195bb825dc4d0a53b51279c3ea8e
