--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,11 +14,11 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install dependencies and Docker images
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint ./*.py
