--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -62,7 +62,7 @@ services:
       - DD_API_KEY=${DD_API_KEY}
       - DD_SITE=datadoghq.com
       - DD_HOSTNAME=nostpytest
-      - DD_TAGS=env:nostpytest owner:brian service:nostpy
+      - DD_TAGS=env:nostpytest owner:brian service:nostpytest
       - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
       - DD_DOCKER_LABELS_AS_TAGS=true
       - DD_DOCKER_ENV_AS_TAGS=true
@@ -73,6 +73,7 @@ services:
       - DD_LOGS_ENABLED=true
       - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
       - DD_LOG_LEVEL=debug
+      - DD_REMOTE_CONFIGURATION_ENABLED=true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /proc/:/host/proc/:ro
