--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile.websocket_handler
     environment:
       - DD_SERVICE=websocket_handler
-      - DD_ENV=nostpytest
+      - DD_ENV=${DD_ENV}
       - DD_LOGS_INJECTION=true
       - DD_PROFILING_ENABLED=true
       - DD_RUNTIME_METRICS_ENABLED=true
@@ -26,7 +26,8 @@ services:
     environment:
       - DD_SERVICE=event_handler
       - DD_AGENT_HOST=datadog-agent
-      - DD_ENV=nostpytest
+      - DD_DBM_PROPAGATION_MODE=full
+      - DD_ENV=${DD_ENV}
       - DD_LOGS_INJECTION=true
       - DD_PROFILING_ENABLED=true
       - DD_RUNTIME_METRICS_ENABLED=true
@@ -49,7 +50,7 @@ services:
       dockerfile: Dockerfile.nost_query
     environment:
       - DD_SERVICE=nost_query
-      - DD_ENV=nostpytest
+      - DD_ENV=${DD_ENV}
       - DD_LOGS_INJECTION=true
       - DD_PROFILING_ENABLED=true
       - DD_RUNTIME_METRICS_ENABLED=true
@@ -73,11 +74,31 @@ services:
     networks:
       my_network:
         ipv4_address: 172.28.0.4
+    command: postgres -c 'config_file=/postgresql.conf'
+    volumes:
+      - ${PWD}/postgresql.conf:/postgresql.conf
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U nostr"] # database username here - nostr, should be changed if other user
       interval: 10s
       timeout: 5s
       retries: 5
+    labels:
+      com.datadoghq.ad.check_names: '["postgres"]'
+      com.datadoghq.ad.init_configs: '[{}]'
+      com.datadoghq.ad.instances: |
+        [
+          {
+            "dbm": true,
+            "username": "datadog",
+            "password" : "datadog",
+            "host": "172.28.0.4",
+            "port" : "5432",
+            "disable_generic_tags": true,
+            "tags" : "db:local_test",
+            "service" : "test-pg-db",
+            "reported_hostname" : "test-pg-db"
+          }
+        ]
 
   datadog-agent:
     container_name: datadog-agent
@@ -86,8 +107,9 @@ services:
       ## GLOBALS
       - DD_API_KEY=${DD_API_KEY}
       - DD_SITE=datadoghq.com
-      - DD_HOSTNAME=nostpytest
-      - DD_TAGS=env:nostpytest owner:brian service:nostpytest
+      - DD_HOSTNAME=nostpy-linux
+      - DD_ENV=${DD_ENV}
+      - DD_TAGS=owner:brian service:nostpytest
       - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
       - DD_DOCKER_LABELS_AS_TAGS=true
       - DD_DOCKER_ENV_AS_TAGS=true
@@ -101,6 +123,7 @@ services:
       - DD_REMOTE_CONFIGURATION_ENABLED=true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /proc/:/host/proc/:ro
       - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
       - /sys/kernel/debug:/sys/kernel/debug
