--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -107,7 +107,7 @@ services:
       ## GLOBALS
       - DD_API_KEY=${DD_API_KEY}
       - DD_SITE=datadoghq.com
-      - DD_HOSTNAME=nostpy-linux
+      - DD_HOSTNAME=nostpy-EC2
       - DD_ENV=${DD_ENV}
       - DD_TAGS=owner:brian service:nostpytest
       - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
