Add var to nginx config, build venv script from menu

--- a/docker_stuff/.env
+++ b/docker_stuff/.env
@@ -4,4 +4,7 @@ POSTGRES_PASSWORD=nostr
 POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
 DD_ENV=nostpy-linux
-DD_API_KEY=
+DD_API_KEY=05bb003859f24b0651bc49276fb5fc0e
+DOMIAN_NAME=nostr.nostpy.lol 
+HEX_PUBKEY=
+CONTACT=bh419@protonmail.com
