--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,2 @@
 [MESSAGES CONTROL]
-disable = C0116,C0114,C0301,C0103,C0303, W0621, W3101
+disable = C0116,C0114,C0301,C0103,C0303, W0621, W3101, W0718
