Add pylint fixes

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,3 +22,4 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         pylint ./*.py
+        pylint ./docker_stuff/python_stuff/*.py
