Change postgres data file path

--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -64,8 +64,8 @@ services:
         ipv4_address: 172.28.0.4
     command: postgres -c 'config_file=/postgresql.conf'
     volumes:
-      - ${PWD}/postgresql.conf:/postgresql.conf
-      - /var/lib/postgresql/data:/var/lib/postgresql/data
+      - ./postgresql.conf:/postgresql.conf
+      - ./postgresql/data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"] # database username here - nostr, should be changed if other user
       interval: 10s
