--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -83,7 +83,7 @@ services:
             "host": "172.28.0.4",
             "port" : "5432",
             "disable_generic_tags": true,
-            "tags" : "db:local_test",
+            "tags" : "db:stg_test",
             "service" : "STAGING-pg-db",
             "reported_hostname" : "STAGING-pg-db"
           }
@@ -96,7 +96,7 @@ services:
     environment:
       - DD_API_KEY=${DD_API_KEY}
       - DD_SITE=datadoghq.com
-      - DD_HOSTNAME=LOCAL
+      - DD_HOSTNAME=staging-nostpy
       - DD_ENV=${DD_ENV}
       - DD_TAGS=owner:brian
       - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
