--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -108,7 +108,7 @@ services:
       - DD_AGENT_HOST=host.docker.internal
       - DD_LOGS_ENABLED=true
       - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
-      - DD_CONTAINER_EXCLUDE="image:datadog/agent:latest"
+      #- DD_CONTAINER_EXCLUDE="image:datadog/agent:latest"
       - DD_LOG_LEVEL=info
       - DD_REMOTE_CONFIGURATION_ENABLED=true
     volumes:
