--- a/docker_stuff/Jenkinsfile
+++ b/docker_stuff/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
             steps {
                 script {
                     sh 'cd ..'
-                    sh 'echo "1" | python3 menu.py'
+                    sh 'echo 1 | python3 menu.py'
                 }
             }
         }
@@ -32,7 +32,7 @@ pipeline {
                 stage('Cleanup') {
                     sh 'cd docker_stuff && docker-compose down'
                     sh 'docker system prune -a --volumes -f' // Remove all unused Docker data again
-                    sh 'sudo rm -r /var/lib/jenkins/workspace/nostpy-build-containers-docker-compose-up/postgres*'
+                    sh 'sudo rm -r /var/lib/jenkins/workspace/nostpy-build-containers-docker-compose-up/*'
                     sh 'docker image ls'
                 }
             }
