Last commit working

--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -75,21 +75,13 @@ services:
           {
             "dbm": true,
             "username": "datadog",
-            "password": "datadog",
+            "password" : "datadog",
             "host": "172.28.0.4",
-            "port": "5432",
+            "port" : "5432",
             "disable_generic_tags": true,
-            "tags": "db:dev_test",
-            "service": "dev-pg-db",
-            "reported_hostname": "dev-pg-db",
-            "collect_activity_metrics": true,
-            "collect_bloat_metrics": false,
-            "database_autodiscovery": {
-              "enabled": true
-            },
-            "collect_schemas": {
-              "enabled": true
-            }
+            "tags" : "db:DEV_test",
+            "service" : "DEV-pg-db",
+            "reported_hostname" : "DEV-pg-db"
           }
         ]
 
