--- a/docker_stuff/.env
+++ b/docker_stuff/.env
@@ -8,8 +8,9 @@ DD_ROLE_NAME=datadog
 DD_ENV=psycopg
 DD_HOSTNAME=dev-nostpy
 DD_API_KEY=<YOUR_API_KEY>
-DOMAIN_NAME=dev.nostpy.lol 
+DOMAIN_NAME=<YOUR_DOMAIN_HERE>
 HEX_PUBKEY=<YOUR_HEX_PUBKEY>
 CONTACT=your_email@email.com
 ENV_FILE_PATH=./docker_stuff/.env
 NGINX_FILE_PATH=/etc/nginx/sites-available/default
+VERSION=v0.6
