add event classes, much list comprehension

--- a/docker_stuff/Dockerfile.event_handler
+++ b/docker_stuff/Dockerfile.event_handler
@@ -7,6 +7,7 @@ COPY .env .
 
 RUN pip install --no-cache-dir -r eh_requirements.txt
 COPY ./python_stuff/event_handler.py .
+COPY ./python_stuff/event_classes.py .
 
 
 CMD ["ddtrace-run", "python", "event_handler.py"]
