update ws dockerfile for otel

--- a/docker_stuff/Dockerfile.websocket_handler
+++ b/docker_stuff/Dockerfile.websocket_handler
@@ -1,12 +1,19 @@
-FROM python:3.9-slim
+FROM python:3.11-slim
 
 WORKDIR /app
-
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        gcc \
+        pkg-config \
+        libc-dev \
+        g++ \
+        make \
+    && rm -rf /var/lib/apt/lists/*
 COPY ws_requirements.txt .
 RUN pip install --no-cache-dir -r ws_requirements.txt
 
-COPY ./python_stuff/websocket_handler.py .
-COPY ./python_stuff/websocket_classes.py .
+COPY ./websocket_handler.py .
+COPY ./websocket_classes.py .
 
 
-CMD ["ddtrace-run", "python", "websocket_handler.py"]
+CMD [ "python", "websocket_handler.py"]
