--- a/docker_stuff/Dockerfile.event_handler
+++ b/docker_stuff/Dockerfile.event_handler
@@ -18,7 +18,8 @@ COPY eh_requirements.txt .
 RUN pip install --no-cache-dir -r eh_requirements.txt
 
 # Copy application code
-COPY . .
+COPY ./python_stuff/event_handler.py .
+COPY ./python_stuff/event_classes.py .
 #"opentelemetry-instrument",
 # Instrument the application with OpenTelemetry and set the command to run the application
 CMD [ "python", "event_handler.py"]
