--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile.websocket_handler
     environment:
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://datadog-agent:4317
       - DD_SERVICE=websocket_handler
       - DD_ENV=${DD_ENV}
       - DD_LOGS_INJECTION=true
@@ -28,6 +29,7 @@ services:
       context: .
       dockerfile: Dockerfile.event_handler
     environment:
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://datadog-agent:4317
       - DD_SERVICE=event_handler
       - DD_AGENT_HOST=datadog-agent
       - DD_DBM_PROPAGATION_MODE=full
@@ -67,24 +69,24 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    labels:
-      com.datadoghq.ad.check_names: '["postgres"]'
-      com.datadoghq.ad.init_configs: '[{}]'
-      com.datadoghq.ad.instances: |
-        [
-          {
-            "dbm": true,
-            "username": "datadog",
-            "password" : "datadog",
-            "host": "172.28.0.4",
-            "port" : "5432",
-            "disable_generic_tags": true,
-            "tags" : "db:DEV_test",
-            "service" : "DEV-pg-db",
-            "reported_hostname" : "DEV-pg-db"
-          }
-        ]
-
+    #labels:
+    #  com.datadoghq.ad.check_names: '["postgres"]'
+    #  com.datadoghq.ad.init_configs: '[{}]'
+    #  com.datadoghq.ad.instances: |
+    #    [
+    #      {
+    #        "dbm": true,
+    #        "username": "datadog",
+    #        "password" : "datadog",
+    #        "host": "172.28.0.4",
+    #        "port" : "5432",
+    #        "disable_generic_tags": true,
+    #        "tags" : "db:DEV_test",
+    #        "service" : "DEV-pg-db",
+    #        "reported_hostname" : "DEV-pg-db"
+    #      }
+    #    ]
+#
   datadog-agent:
     container_name: datadog-agent
     image: datadog/agent:latest
@@ -107,6 +109,7 @@ services:
       - DD_LOG_LEVEL=info
       - DD_REMOTE_CONFIGURATION_ENABLED=true
       - DD_LOGS_CONFIG_AUTO_MULTI_LINE_DETECTION=true
+      - DD_OTLP_CONFIG_RECEIVER_PROTOCOLS_GRPC_ENDPOINT=0.0.0.0:4317
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
@@ -140,6 +143,17 @@ services:
     networks:
       my_network:
         ipv4_address: 172.28.0.6
+
+  nginx-certbot:
+    #build: .
+    image: bhartford419/nginx-certbot:nostpyv4
+    environment:
+      - DOMAIN=relay.nostpy.lol
+      - DOCKER_SVC=websocket_handler
+      - SVC_PORT=8008
+    ports:
+      - "80:80"
+      - "443:443"
 
 volumes:
   postgres_data:
