--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -149,7 +149,7 @@ services:
     image: bhartford419/nginx-certbot:nostpyv4
     environment:
       - DOMAIN=relay.nostpy.lol
-      - DOCKER_SVC=docker_stuff_websocket_handler_1
+      - DOCKER_SVC=172.28.0.2
       - SVC_PORT=8008
     ports:
       - "80:80"
