--- a/docker_stuff/.env
+++ b/docker_stuff/.env
@@ -2,11 +2,10 @@ PGDATABASE=nostr
 PGUSER=nostr
 PGPASSWORD=nostr
 PGPORT=5432
-PGHOST=172.28.0.4
-DD_ROLE_PASSWORD=datadog
-DD_ROLE_NAME=datadog
-DD_ENV=psycopg
-DD_HOSTNAME=dev-nostpy
+PGHOST=postgres
+DD_ENV=psycopg_otel
+REDIS_HOST=redis
+DD_HOSTNAME=local-nostpy
 DD_API_KEY=<YOUR_API_KEY>
 DOMAIN_NAME=<YOUR_DOMAIN_HERE>
 HEX_PUBKEY=<YOUR_HEX_PUBKEY>
