--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile.websocket_handler
     environment:
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://opentelemetry-collector:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://172.28.0.7:4317
     ports:
       - 8008:8008
     networks:
@@ -17,7 +17,7 @@ services:
       context: .
       dockerfile: Dockerfile.event_handler
     environment:
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://opentelemetry-collector:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://172.28.0.7:4317
       - REDIS_HOST=${REDIS_HOST}
     networks:
       my_network:
@@ -83,6 +83,9 @@ services:
       - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
       - /sys/kernel/debug:/sys/kernel/debug
       - ./config-opentelemetry.yaml:/etc/otel/config.yaml
+    networks:
+    my_network:
+      ipv4_address: 172.28.0.7
     ports:
       - "55680:55680"
       - "4317:4317"
