add deployment env var

--- a/docker_stuff/config-opentelemetry.yaml
+++ b/docker_stuff/config-opentelemetry.yaml
@@ -102,6 +102,10 @@ processors:
       - key: service.instance.id
         value: "my-manual-hostname"
         action: upsert
+      attributes:
+      - key: deployment.environment
+        value: nostpy-otel
+        action: upsert
 
 connectors:
   datadog/connector:
