--- a/docker_stuff/.env
+++ b/docker_stuff/.env
@@ -5,9 +5,8 @@ PGPORT=5432
 PGHOST=postgres
 DD_ENV=psycopg_otel
 REDIS_HOST=redis
-DD_HOSTNAME=local-nostpy
 DD_API_KEY=<YOUR_API_KEY>
-DOMAIN_NAME=<YOUR_DOMAIN_HERE>
+DOMAIN=<YOUR_DOMAIN_HERE>
 HEX_PUBKEY=<YOUR_HEX_PUBKEY>
 CONTACT=your_email@email.com
 ENV_FILE_PATH=./docker_stuff/.env
