--- a/docker_stuff/docker-compose.yaml
+++ b/docker_stuff/docker-compose.yaml
@@ -62,7 +62,9 @@ services:
         ipv4_address: 172.28.0.6
 
   nginx-certbot:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     #image: bhartford419/nginx-certbot:nostpyv4
     environment:
       - DOMAIN=${DOMAIN}
